# crud_python_postgres

./: README.md  pyproject.toml
backend/: database.py
